--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 
          <div class="nine columns main-col">
 
-            <h2>About Me</h2>
+            <h2>Current Interests</h2>
 
-            <p>Currently a sophomore undergraduate student in Indian Institute of Technology, Jodhpur pursuing Computer Science and Engineering. Currently I like to do competitive programming and my preferred language is C++. I have experience in deep learning, front-end development and software development. Problem solving is my current hobby. I love to solve real-life problems using my knowledge in programming.
+            <p>I am currently looking for summer internships in software development and other experience.<br> 
             </p>
 
             <div class="row">
