--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
             <h2>Current Interests</h2>
 
-            <p>I am currently looking for summer internships in software development and other experience.<br> 
+            <p>I am currently looking for summer internships in software development.<br> 
             </p>
 
             <div class="row">
@@ -100,7 +100,7 @@
                   <h2>Contact Details</h2>
                   <p class="address">
 						   <span>Mihir Sakaria</span><br>
-						   <span>G-6 Hostel, Indian Institute of Technology, Jodhpur<br>
+						   <span>G-6 Hostel, IIT, Jodhpur<br>
 						         NH-65,Karwar, Jodhpur, Rajasthan<br> Pin :324037
                      </span><br>
 						   <span>+91 7023450264</span><br>
