--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
             <li><a class="smoothscroll" href="#about">About</a></li>
 	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
-            <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
+            <li><a class="smoothscroll" href="#testimonials">Showcase</a></li>
          </ul> <!-- end #nav -->
 
       </nav> <!-- end #nav-wrap -->
@@ -90,7 +90,7 @@
 
             <h2>Current Interests</h2>
 
-            <p>I am currently looking for summer internships in software development.<br> 
+            <p>I am currently looking for summer internships in software development.<br>
             </p>
 
             <div class="row">
@@ -289,7 +289,6 @@
 
             <div class="two columns header-col">
 
-               <h1><span>Client Testimonials</span></h1>
 
             </div>
 
@@ -301,19 +300,18 @@
 
                      <li>
                         <blockquote>
-                           <p>Your work is going to fill a large part of your life, and the only way to be truly satisfied is
-                           to do what you believe is great work. And the only way to do great work is to love what you do.
-                           If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
+                          <p><span> StartUp Service Provider</span> </p>
+                           <p> It is an interface to connect the startups with the Investors, freelancers, Advertisers, and Mentors. Create an account on this interface, and check the Investors, companies or startups and select the ones of your choice.
                            </p>
-                           <cite>Steve Jobs</cite>
+                           <a href="https://github.com/mihirsakaria/Startup_Service_Provider" class="button"> Startup Service Provider </a>
                         </blockquote>
                      </li> <!-- slide ends -->
 
                      <li>
                         <blockquote>
-                           <p>People who succeed have momentum. The more they succeed, the more they want to succeed and the more they find a way to succeed. Similarly, when someone is failing, the tendency is to get on a downward spiral that can even become a self-fulfilling prophecy
+                           <p><span>Edge Detection of Objects</span></p>
+                           <p>An application using the Fourier Transform is used to detect edge of the objects. Further using this principle and CNN to detect what the object can be.
                            </p>
-                           <cite>Tony Robbins</cite>
                         </blockquote>
                      </li> <!-- slide ends -->
 
