updating portfolio for final year

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Mihir Sakaria</h1>
-            <h3>I'm currently pursuring B.Tech in <span>Computer Science and Engineering</span> from  <span>Indian Institute of Technology, Jodhpur</span>. My current interest lies in competitive programming in C++ language. I have experience in deep learning, web designing and software development. I like to solve realistic day to day challenges and problems using the knowledge of software development, deeplearning etc. Let's <a class="smoothscroll" href="#about">start scrolling</a>
+            <h3>I'm currently pursuring B.Tech in <span>Computer Science and Engineering</span> from  <span>Indian Institute of Technology, Jodhpur</span>. My current interest lies in software development as well as full stack web development. I also have experience in Deep Learning as well as image processing. I like to solve realistic day to day challenges and problems using the knowledge of computer science. Let's <a class="smoothscroll" href="#about">start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
@@ -90,7 +90,7 @@
 
             <h2>Current Interests</h2>
 
-            <p>I am currently looking for summer internships in software development.<br>
+            <p>I am currently looking for full time roles starting from June 2022.<br>
             </p>
 
             <div class="row">
@@ -183,6 +183,49 @@
          </div>
 
          <div class="nine columns main-col">
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>Remote Desktop Controller</h3>
+                  <p class="info">Course Project in Computer networks <span>&bull;</span> <em class="date">December 2020 - February 2021</em></p>
+
+                  <p>
+                     <ul>
+                        <li>•  Application which allows us to control one desktop with another desktop connected over same network </li>
+                        <li>• A very user friendly interface which makes it very easy to use </li>
+                        <li>• Does not save any kind of data, thus enables user privacy</li>
+                        <li>• Ensures minimum usage of bandwidth </li>
+                         
+                        <li> •Technologies Involved: <b>Socket Programming , Java</b></li>
+                     </ul>
+                  </p>
+
+               </div>
+
+            </div>
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>Real time mapping of Heart Rate and Spo2 with RGB videos</h3>
+                  <p class="info">B-Tech Project <span>&bull;</span> <em class="date">December 2020 - April 2021</em></p>
+
+                  <p>
+                     <ul>
+                        <li>• Designed an application to calculate the Heart Rate and Blood Oxygen Levels of a person through their RGB videos </li>
+                        <li>• Established Correlation between heart rate and blood oxygen levels </li>
+                        <li>• Successfully determined heartrate with an accuracy of 75%</li>
+                        <li>• Successfully determined Blood Oxygen levels with an accuracy of 98% </li>
+                         
+                        <li> •Technologies Involved: <b>Python, Tensorflow, Keras</b></li>
+                     </ul>
+                  </p>
+
+               </div>
+
+            </div>
 
             <div class="row item">
 
@@ -192,11 +235,10 @@
                   <p class="info">B.Tech Project under guidance of Dr. Sumit Kalra <span>&bull;</span> <em class="date">February 2020 - Present</em></p>
 
                   <p>
-                    • Application for detecting arrows in a flowchart
-                    • Involved creating a new data set of arrows and flowcharts
-                    • Using Keras API and tensorflow, Deeplearning model is trained using the data
-                    set created in order to detect new arrows
-                    • Technologies Involved: <span>Python,Keras API,Tensorflow</span>
+                    • Application for detecting arrows in a flowchart<br>
+                    • Succesfully classified the flowcharts with respect to their arrow categories <br>
+                    • Accuracy of the model was 87% <br>
+                    • Technologies Involved: <b>Python,Keras API,Tensorflow</b>
                   </p>
 
                </div>
@@ -211,9 +253,9 @@
                   <p class="info">Object Oriented Analysis and Design Course Project <span>&bull;</span> <em class="date">July 2019 - November 2019</em></p>
 
                   <p>
-                    • A portal for Startups and Companies,Freelancers,Mentors,Advertisers to collaborate and work together
-                    • Additional Features using python scripts
-                    • Technologies involved : <span>C++,Python</span>
+                    • A portal for Startups and Companies,Freelancers,Mentors,Advertisers to collaborate and work together<br>
+                    • Additional Features using python scripts<br>
+                    • Technologies involved : <b>C++,Python</b><br>
                   </p>
 
                </div>
@@ -228,8 +270,8 @@
                   <p class="info">Fourier Transform based Edge Detection of Real objects <span>&bull;</span> <em class="date">July 2019 - November 2019</em></p>
 
                   <p>
-                    • An application working on basis of Fourier Transform, used for detecting edge of objects
-                    • Further using this application using CNN to train a deep-learning model to predict what an unknown object can be
+                    • An application working on basis of Fourier Transform, used for detecting edge of objects<br>
+                    • Further using this application using CNN to train a deep-learning model to predict what an unknown object can be<br>
                   </p>
 
                </div>
@@ -263,7 +305,9 @@
             <li><span class="bar-expand Cpp"></span><em>C++</em></li>
 						<li><span class="bar-expand Python"></span><em>Python</em></li>
 						<li><span class="bar-expand html"></span><em>HTML</em></li>
-						<li><span class="bar-expand ReactJS"></span><em>ReactJS</em></li>
+                  <li><span class="bar-expand css"></span><em>CSS</em></li>
+                  <li><span class="bar-expand javascript"></span><em>javascript</em></li>
+						<li><span class="bar-expand java"></span><em>java</em></li>
 					</ul>
 
 				</div><!-- end skill-bars -->
@@ -297,7 +341,20 @@
                <div class="flexslider">
 
                   <ul class="slides">
-
+                     <li>
+                        <blockquote>
+                          <p><span> Real Time heartbeat and blood oxygen level detection</span> </p>
+                           <p>An application made using image processing and deep learning to be able to determine the blood oxygen levels and heart rate of a person in a contactless way from their RGB videos</p>
+                           <a href="https://github.com/mihirsakaria/Real-time-heartbeat-detection" class="button"> Real Time Heart Rate and SpO2 Detection </a>
+                        </blockquote>
+                     </li>
+                     <li>
+                        <blockquote>
+                          <p><span> Remote Desktop Controller</span> </p>
+                           <p>A software to control one desktop with another desktop along with file sharing and chatting interface.</p>
+                           <a href="https://github.com/mihirsakaria/DesktopControl" class="button">Remote Desktop Controller </a>
+                        </blockquote>
+                     </li>
                      <li>
                         <blockquote>
                           <p><span> StartUp Service Provider</span> </p>
